cleaned, changed dir name

--- a/Llama2/cause_prediction_training.ipynb
+++ b/Llama2/cause_prediction_training.ipynb
@@ -433,13 +433,9 @@
         "        else:\n",
         "            obj = {\n",
         "                \"instruction\": inst,\n",
-        "                # \"out\": out,\n",
-        "                # \"text\": inst + out,\n",
         "                \"emotion_label\": sample_data_point[\"emotion_label\"],\n",
         "                \"utterance_id\": sample_data_point[\"utterance_id\"],\n",
         "                \"conversation_id\": sample_data_point[\"conversation_id\"],\n",
-        "                # \"causes_label\":sample_data_point[\"causes_label\"],\n",
-        "                # \"causes_list\":sample_data_point[\"causes_list\"]\n",
         "            }\n",
         "        list_output_objects.append(obj)\n",
         "    return list_output_objects"
@@ -619,8 +615,8 @@
         "    print(len(train_data))\n",
         "    print(len(test_data))\n",
         "    print(len(val_data))\n",
-        "    train_data = train_data[:400]\n",
-        "    val_data = val_data[:30]\n",
+        "    train_data = train_data\n",
+        "    val_data = val_data\n",
         "    test_data = test_data\n",
         "\n",
         "    # Form datasets from data\n",
@@ -1983,8 +1979,6 @@
       ],
       "source": [
         "# wandb config\n",
-        "\n",
-        "\n",
         "wandb_config = {\n",
         "    \"speaker\":config.speaker,\n",
         "    \"video\":config.video,\n",
@@ -2893,40 +2887,38 @@
         }
       ],
       "source": [
-        "with open(\"./data/Subtask_2_2_train.json\", 'r') as f:\n",
-        "    data = json.load(f)\n",
-        "    data = data[-80:-30]\n",
+        "data = test_data\n",
         "\n",
-        "    # create a map for storing cause_list for each utt of each conv\n",
-        "    # map of map\n",
-        "    cause_map = {}\n",
-        "    for conv in data:\n",
-        "        conv_id = conv[\"conversation_ID\"]\n",
-        "        cause_map[conv_id] = {}\n",
-        "        for pair in conv[\"emotion-cause_pairs\"]:\n",
-        "            emo_id = int(pair[0].split('_')[0])\n",
-        "            cau_id = int(pair[1])\n",
-        "            if emo_id in cause_map[conv_id].keys():\n",
-        "                cause_map[conv_id][emo_id].append(cau_id)\n",
-        "            else:\n",
-        "                cause_map[conv_id][emo_id] = [cau_id]\n",
-        "    # Now go through utt and add their \"cause_list\", could be [] for neutral\n",
-        "    for conv in data:\n",
-        "        conv_id = conv[\"conversation_ID\"]\n",
-        "        if conv_id not in cause_map.keys():\n",
-        "            for utt in conv[\"conversation\"]:\n",
-        "                utt[\"cause_list\"] = []\n",
+        "# create a map for storing cause_list for each utt of each conv\n",
+        "# map of map\n",
+        "cause_map = {}\n",
+        "for conv in data:\n",
+        "    conv_id = conv[\"conversation_ID\"]\n",
+        "    cause_map[conv_id] = {}\n",
+        "    for pair in conv[\"emotion-cause_pairs\"]:\n",
+        "        emo_id = int(pair[0].split('_')[0])\n",
+        "        cau_id = int(pair[1])\n",
+        "        if emo_id in cause_map[conv_id].keys():\n",
+        "            cause_map[conv_id][emo_id].append(cau_id)\n",
         "        else:\n",
-        "            for utt in conv[\"conversation\"]:\n",
-        "                utt_id = utt[\"utterance_ID\"]\n",
-        "                if utt_id not in cause_map[conv_id].keys():\n",
-        "                    utt[\"cause_list\"] = []\n",
-        "                else:\n",
-        "                    utt[\"cause_list\"] = cause_map[conv_id][utt_id]\n",
+        "            cause_map[conv_id][emo_id] = [cau_id]\n",
+        "# Now go through utt and add their \"cause_list\", could be [] for neutral\n",
+        "for conv in data:\n",
+        "    conv_id = conv[\"conversation_ID\"]\n",
+        "    if conv_id not in cause_map.keys():\n",
+        "        for utt in conv[\"conversation\"]:\n",
+        "            utt[\"cause_list\"] = []\n",
+        "    else:\n",
+        "        for utt in conv[\"conversation\"]:\n",
+        "            utt_id = utt[\"utterance_ID\"]\n",
+        "            if utt_id not in cause_map[conv_id].keys():\n",
+        "                utt[\"cause_list\"] = []\n",
+        "            else:\n",
+        "                utt[\"cause_list\"] = cause_map[conv_id][utt_id]\n",
         "\n",
-        "    dataset = process_dataset(data, speaker=config.speaker, video=config.video)\n",
-        "    dataset = Dataset.from_dict(dataset)\n",
-        "    print(\"len {}\".format(len(dataset[\"instruction\"])))"
+        "dataset = process_dataset(data, speaker=config.speaker, video=config.video)\n",
+        "dataset = Dataset.from_dict(dataset)\n",
+        "print(\"len {}\".format(len(dataset[\"instruction\"])))"
       ]
     },
     {
@@ -4443,8 +4435,7 @@
         "        utt_id = dataset[\"utterance_id\"][i]\n",
         "        if conv_id not in pred_causes_map.keys():\n",
         "            pred_causes_map[conv_id] = {}\n",
-        "        pred_causes_map[conv_id][utt_id] = output\n",
-        "\n"
+        "        pred_causes_map[conv_id][utt_id] = output\n"
       ]
     },
     {
@@ -6155,14 +6146,11 @@
       "outputs": [],
       "source": [
         "# Save results\n",
-        "with open(eval_results_folder + \"/pred_text_batched.json\", 'w', encoding=\"utf-8\") as f:\n",
-        "    for string in full_output:\n",
-        "        f.write(f\"{string}\\n[/NEWNEW]\\n\")\n",
-        "with open(eval_results_folder + \"/pred_list_batched.json\", 'w', encoding=\"utf-8\") as f:\n",
+        "with open(eval_results_folder + \"/pred_list.json\", 'w', encoding=\"utf-8\") as f:\n",
         "    for i in range(len(preds_list)):\n",
         "        f.write(f'{preds_list[i]}\\n')\n",
         "if with_labels:\n",
-        "    with open(eval_results_folder + \"/true_list_batched.json\", 'w', encoding=\"utf-8\") as f:\n",
+        "    with open(eval_results_folder + \"/true_list.json\", 'w', encoding=\"utf-8\") as f:\n",
         "        for i in range(len(true_list)):\n",
         "            f.write(f'{true_list[i]}\\n')\n",
         "# Save dict\n",
